# agentic-api

./: Cargo.toml
.github/: pull_request_template.md
benches/: proxy_bench.rs
crates/agentic-core/src/executor/: accumulator.rs
crates/agentic-core/tests/: accumulator_cassette_test.rs
crates/agentic-server/benches/: proxy_bench.rs
crates/agentic-server/src/: app.rs  server.rs
crates/agentic-server/tests/: cors_test.rs
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs  server.rs
tests/: proxy_test.rs
tests/common/: mod.rs
